# test_yocto_build

./: Makefile.am  README.md  configure.ac  hworld.c  hworld.h
