#AC_PREREQ(2.60)
AC_INIT(YoctoHelloWorldApp, 1.0, reelsqueal@gmail.com)
AC_CONFIG_SRCDIR([hworld.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(YoctoHelloWorldApp, main)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PROG_LIBTOOL

AC_DISABLE_STATIC

AC_ENABLE_SHARED

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT


